# Titanic

./: Makefile  README.md  pyproject.toml
notebooks/: 1.0-wjc-initial-data-exploration.ipynb  2.0-wjc-data-exploration.ipynb  3.0-wjc-model-exploration.ipynb
