[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic"
version = "0.0.1"
description = "Kaggle - Titanic - Machine Learning from Disaster"
authors = [
  { name = "Wilson Cardoso" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["titanic"]
include = ["pyproject.toml", "titanic/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["titanic"]
force-sort-within-sections = true

